# xml-builder-rs

./: Cargo.toml  README.md
lib/: attribute.rs  builder.rs
src/: attribute.rs  builder.rs  declaration.rs  element.rs  lib.rs  namespace.rs
src/lib/: attribute.rs  builder.rs  declaration.rs  element.rs  mod.rs  namespace.rs
